[gd_scene load_steps=8 format=3 uid="uid://dux6m0rbjrq6h"]

[ext_resource type="Texture2D" uid="uid://bmj6lolt816ms" path="res://sprites/char.png" id="1_mujva"]
[ext_resource type="Script" path="res://scenes/player.gd" id="1_rixju"]
[ext_resource type="FontFile" uid="uid://cu72bec757ksd" path="res://sprites/PublicPixel10.ttf" id="3_cgp41"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ibq4q"]
size = Vector2(10, 14)

[sub_resource type="Gradient" id="Gradient_2reem"]
offsets = PackedFloat32Array(0, 0.3, 0.504348, 0.7, 1)
colors = PackedColorArray(0.890196, 0.890196, 0.890196, 0, 0.929412, 0.929412, 0.929412, 0.74902, 0.854634, 0.854634, 0.854634, 1, 0.929715, 0.929715, 0.929715, 0.74902, 0.889147, 0.889147, 0.889147, 0)
metadata/_snap_enabled = true

[sub_resource type="GradientTexture2D" id="GradientTexture2D_t5jl6"]
gradient = SubResource("Gradient_2reem")
width = 32
height = 1

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7kxuy"]
size = Vector2(10, 15.6)

[node name="Player" type="CharacterBody2D"]
collision_layer = 3
script = ExtResource("1_rixju")
speed = 96.0
jump_height = 31.4
jump_time_to_peak = 0.8
jump_time_to_fall = 0.6

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -7)
shape = SubResource("RectangleShape2D_ibq4q")

[node name="FloatSprite" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 0.113725, 0.188235, 1)
texture = SubResource("GradientTexture2D_t5jl6")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -8)
texture = ExtResource("1_mujva")

[node name="JumpAllowRaycast1" type="RayCast2D" parent="."]
position = Vector2(-5, 0)
target_position = Vector2(0, -16)

[node name="JumpAllowRaycast2" type="RayCast2D" parent="."]
position = Vector2(5, 0)
target_position = Vector2(0, -16)

[node name="PositionLabel" type="RichTextLabel" parent="."]
visible = false
offset_left = -107.0
offset_right = 117.0
offset_bottom = 32.0
theme_override_fonts/normal_font = ExtResource("3_cgp41")
theme_override_font_sizes/normal_font_size = 8

[node name="CollisionShapeJumping" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_7kxuy")

[node name="FloorRaycast1" type="RayCast2D" parent="."]
position = Vector2(-5, 0)
target_position = Vector2(0, 1)

[node name="FloorRaycast2" type="RayCast2D" parent="."]
position = Vector2(5, 0)
target_position = Vector2(0, 1)

[node name="LeftLowRay" type="RayCast2D" parent="."]
position = Vector2(-5, 0)
target_position = Vector2(-1, 0)

[node name="LeftHighRay" type="RayCast2D" parent="."]
position = Vector2(-5, -15)
target_position = Vector2(-1, 0)

[node name="RightLowRay" type="RayCast2D" parent="."]
position = Vector2(5, 0)
target_position = Vector2(1, 0)

[node name="RightHighRay" type="RayCast2D" parent="."]
position = Vector2(5, -15)
target_position = Vector2(1, 0)
